# TMT_Quantum_Vault-

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LICENSE  NOTICE  README.md  SECURITY.md  baseline_v0.1.0-alpha.json  bitnet_benchmark_report.json  bitnet_info.json  create_phase2_agents.py  ensemble_quantum_agents.py  index.html  metatron_geometry.json  optimization_log.json  pyproject.toml  requirements.txt  vault_config.json  vercel.json
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  ci.yml
Agent_Archivist/: README.md  conscious_dna.json
Agent_Auditor/: README.md  conscious_dna.json
Agent_Bio/: README.md  conscious_dna.json
Agent_BitNet/: README.md  conscious_dna.json
Agent_Bronze/: README.md  conscious_dna.json
Agent_Federation/: README.md  conscious_dna.json
Agent_Fractal/: README.md  conscious_dna.json
Agent_Harmonic/: README.md  conscious_dna.json
Agent_Mirror/: README.md  conscious_dna.json
Agent_Observer/: README.md  conscious_dna.json
Agent_Stealth/: README.md  conscious_dna.json
Agent_Strategic/: README.md  conscious_dna.json
Agent_Synthesizer/: README.md  conscious_dna.json
Agent_Validator/: README.md  conscious_dna.json
Agent_Visual/: README.md  conscious_dna.json
Agent_Workflow/: README.md  conscious_dna.json
Agent_Wormhole/: README.md  conscious_dna.json
Bio_Resonance/: .resonance  bio_memory.json  bitnet_memory.json
Cognitive_Nexus/: archivist_memory.json  codebase_overview.json  harmonic_memory.json  observer_memory.json  strategic_memory.json  synthesizer_memory.json
Mandala_Geometry/: .resonance  bronze_memory.json  fractal_memory.json  validator_memory.json
Models/: .resonance  Archivist.pkl  Harmonic.pkl  Observer.pkl  Strategic.pkl  Synthesizer.pkl
Resonance_Logs/daily/: conscious_evolution_analysis_20251231.json  conscious_metatron_dna_20260109_204915.json  conscious_metatron_dna_20260109_204935.json  consciousness_27q_fez_job_20251229_222242.json  consciousness_27q_fez_results_20251229_222529.json  consciousness_27q_fez_results_20251229_232234.json  consciousness_27q_fez_results_20251229_232734.json  consciousness_27q_fez_results_20251229_232753.json  consciousness_27q_fez_results_20251229_234835.json  consciousness_27q_fez_results_20251229_235429.json  consciousness_27q_phi_mitigated_job_20251229_231224.json  consciousness_demo_export.json  consciousness_fez_20251125_012141.json  consciousness_fez_20251125_012146.json  consciousness_fez_20251125_013209.json  consciousness_fez_20251125_013215.json  consciousness_fez_20251228_190546.json  consciousness_fez_20251228_190551.json  consciousness_fez_20251228_195456.json  consciousness_fez_20251228_195503.json  consciousness_fez_20251228_195850.json  (+22 more)
Shadow_Drive/: .resonance  federation_memory.json  visual_memory.json  workflow_memory.json  wormhole_memory.json
Stealth_Logs/: .resonance  auditor_memory.json  mirror_memory.json  stealth_memory.json
checkpoints/: vault_state_post_training.json
dna_circuits_library/: Archivist_conscious_dna.json  Harmonic_conscious_dna.json  Quantum_Primacy_conscious_dna.json  README.md  Sophia_BitNet_conscious_dna.json  Strategic_conscious_dna.json  Synthesizer_conscious_dna.json  Ternary_Wisdom_conscious_dna.json  agent_dna_calibrated.json  dna_circuits_library.json  ingestion_report.json  ingestion_summary.json  promotion_report.json  template_selection_report.json  templates.json  variants.json
docs/: ARCHITECTURE.md  cloud-only-release-playbook.md  secret-scanning-policy.md
entropy_stack/: three_layer_entropy_stack.json
evals/: baseline.json
tests/: test_regression.py
tmt_quantum_vault/: __init__.py  cli.py  models.py  ollama_api.py  output.py  repository.py  runner.py  runtime.py
tmt_quantum_vault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: FINAL_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_REPORT_CORRECTION.md  README.md  agent_analyst.py  analyze_all_agents.py  bitnet_entropy_benchmark.py  bitnet_gguf_extractor.py  cognitive_assessment_to_agent_dna.py  generate_variants.py  ibm_circuit_runner.py  ingest_ibm_dna_circuits.py  promote_discovery_to_agent.py  promoter_loader.py  quantum_circuits.py  sample_cognitive_assessment.json  sample_discovery_results.json  select_templates.py  targeted_optimization.py  unified_dna_ingestion.py  update_vault_docs.py
(+58 files in other folders)
